# authenticator

./: .gitignore  Cargo.toml  Dev.Dockerfile  Dockerfile  Prod.Dockerfile  README.md  aarch64-build.sh  aarch64-run.sh  auth.db  deployment.yaml  docker-compose.yml  mock-data.psql  run.sh  schema.psql  schema.sql
backend/: .gitignore  Cargo.toml  aarch64-build.sh  aarch64-run.sh  run.sh
backend/sql/: 1-auth-schema.sql  2-mock-data.sql
backend/src/: api_key_service.rs  handlers.rs  main.rs  password_reset_service.rs  password_service.rs  user_data_service.rs  user_service.rs  utils.rs  verification_challenge_service.rs
example-data/: mail.db
kubernetes/: deployment.yaml
sql/: 1-auth-schema.sql  2-auth-schema.psql  2-auth-schema.sql  2-mock-data.sql  4-mock-data.psql  4-mock-data.sql  auth-schema.psql  auth-schema.sql  mail-schema.psql
src/: api.rs  api_key_service.rs  auth_api.rs  auth_db_types.rs  auth_handlers.rs  auth_model.rs  db_types.rs  email_service.rs  handlers.rs  log_service.rs  main.rs  parent_permission_service.rs  password_reset_service.rs  password_service.rs  user_data_service.rs  user_service.rs  utils.rs  verification_challenge_service.rs
web-frontend/: README.md  package-lock.json  package.json  vite.config.mts
web-frontend/public/: index.html
web-frontend/src/: App.tsx  index.html  setupProxy.js
web-frontend/src/components/: EditUserDataForm.tsx  LoginForm.tsx  ManageUserData.tsx  PartiallyAuthenticatedComponentProps.ts  PartiallyAuthenticatedComponentRenderer.tsx  RegisterForm.tsx  SidebarLayout.tsx
web-frontend/src/pages/: Account.tsx  EmailConfirm.tsx  ForgotPassword.tsx  HomePage.tsx  Login.tsx  ParentPermissionConfirm.tsx  Register.tsx  ResetPassword.tsx
web-frontend/src/style/: style.scss
