[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio-postgres = "0.7.6"
rust-argon2 = "1.0.0"
sha2 = "0.10.2"
reqwest = { version = "0.11.11", features = ["json"] }
warp = "0.3.2"
clap = { version = "3.2.7", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api" }
mail-service-api = {version = "*", git = "https://github.com/innexgo/mail-service-api", features=["client"]}
base64-url = "1.4.13"
