[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio-postgres = "0.7.8"
rust-argon2 = "1.0.0"
sha2 = "0.10.7"
reqwest = { version = "0.11.18", features = ["json"] }
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api" }
mail-service-api = {version = "*", git = "https://github.com/innexgo/mail-service-api", features=["client"]}
base64-url = "2.0.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
actix-cors = "0.6.4"
